--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="title_favorite">Favorite</string>
     <string name="title_search">Search</string>
     <string name="content_description">Backdrop for movie</string>
+    <string name="read_more">Read more</string>
+    <string name="actor">Actor</string>
+    <string name="producer">Producer</string>
 </resources>
